<resources>
    <string name="app_name">Know Your Gov</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="official_title">OFFICIAL TITLE</string>
    <string name="official_name_official_party">Official Name (Official Party)</string>
    <string name="todo">TODO</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="powered_by">Powered By</string>
    <string name="google_civic_information_api">Google Civic Information API</string>
    <string name="_2020_dimitri_vityk">© 2020, Dimitri Vityk</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="user_location">User Location</string>
</resources>